--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/material": "^5.9.3",
-    "@tanstack/react-query": "^4.0.10",
-    "@tanstack/react-query-devtools": "^4.0.10",
-    "axios": "^0.27.2",
+    "@emotion/react": "11.10.0",
+    "@emotion/server": "11.10.0",
+    "@emotion/styled": "11.10.0",
+    "@mui/material": "5.9.3",
+    "@tanstack/react-query": "4.0.10",
+    "@tanstack/react-query-devtools": "4.0.10",
+    "autosuggest-highlight": "^3.3.4",
+    "axios": "0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-cool-img": "^1.2.12",
-    "react-dom": "18.2.0"
+    "react-cool-img": "1.2.12",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0"
   },
   "devDependencies": {
+    "@types/autosuggest-highlight": "^3.2.0",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
