--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autosuggest-highlight": "^3.3.4",
     "axios": "0.27.2",
     "next": "12.2.3",
+    "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-cool-img": "1.2.12",
     "react-dom": "18.2.0",
